@@ -215,6 +215,15 @@ module Druid
       def wait_until(timeout=5, message=nil, &block)
         Watir::Wait.until(timeout, message, &block)
       end
+
+      # @private
+      # delegate calls to driver element
+      def method_missing(m, *args, &block)
+        unless element.respond_to?(m)
+          raise NoMethodError, "undefined method `#{m}` for #{element.inspect}:#{element.class}"
+        end
+        element.__send__(m, *args, &block)
+      end
     end
   end
 end
